--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <model-viewer 
-        src="./YOUR_FILE_NAME.glb" 
+        src="./n19_chanel_paris_eau_de_parfum.glb" 
         alt="A 3D model" 
         auto-rotate 
         camera-controls 
